cmake_minimum_required(VERSION 3.20)
project(c_cpp_basic VERSION 1.0.0)

#定义C++版本
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

#add_subdirectory(c_basic)
#add_subdirectory(cpp_basic)
#add_subdirectory(cmake_demos)
#add_subdirectory(common-utils)
#add_subdirectory(qt_demos)
#add_subdirectory(dds-demos)
#add_subdirectory(asio_demos)
add_subdirectory(crypto)

